--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -17,8 +17,8 @@
   "ERROR_USER_PASS_INCORRECT": "Invalid username or password",
   "REMEMBER_ME": "Remember me",
   "FORGOT_PWD": "Forgot your password?",
-  "FOOTER_CREATED_BY": "Created by Imatia Innovation",
-  "FOOTER_RIGHTS": "All rights reserved",
+  "FOOTER_CREATED_BY": "Team WheGym Innovation ->> ",
+  "FOOTER_RIGHTS": " <-- All rights reserved",
   "GYMS": "Gyms",
   "name": "Name",
   "address": "Adress",
