--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -17,8 +17,8 @@
   "ERROR_USER_PASS_INCORRECT": "Usuario o contraseña incorrecta",
   "REMEMBER_ME": "Recuérdame",
   "FORGOT_PWD": "¿Has olvidado tu contraseña?",
-  "FOOTER_CREATED_BY": "Creado por Imatia Innovation",
-  "FOOTER_RIGHTS": "Todos los derechos reservados",
+  "FOOTER_CREATED_BY": "Equipo WheGym Innovation ->>",
+  "FOOTER_RIGHTS": " <<-Todos los derechos reservados",
   "GYMS": "Gimnasios",
   "name": "Nombre",
   "address": "Dirección",
