GymDao modified and implemented frontend

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -27,7 +27,6 @@
   "email": "Email",
   "schedule": "Schedule",
   "description": "Description",
-  "photo": "Photo"
-
-
+  "photo": "Photo",
+  "rate": "Rate"
 }
