Added categories column

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -28,5 +28,6 @@
   "schedule": "Schedule",
   "description": "Description",
   "photo": "Photo",
-  "rate": "Rate"
+  "rate": "Rate",
+  "categories": "Categories"
 }
