--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -28,5 +28,6 @@
   "schedule": "Horario",
   "description": "Descripción",
   "photo": "Foto",
-  "rate": "Valoración"
+  "rate": "Valoración",
+  "categories": "Categorías"
 }
