services for gym added

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -30,5 +30,7 @@
   "photo": "Photo",
   "rate": "Rate",
   "categories": "Categories",
-  "services": "Services"
+  "services": "Services",
+  "price": "Price",
+  "duration":"Duration"
 }
