--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -30,5 +30,7 @@
   "photo": "Foto",
   "rate": "Valoración",
   "categories": "Categorías",
-  "services":"Servicios"
+  "services":"Servicios",
+  "price": "Precio",
+  "duration":"Duración"
 }
