state gym active added

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -32,5 +32,6 @@
   "categories": "Categories",
   "services": "Services",
   "price": "Price",
-  "duration":"Duration"
+  "duration":"Duration",
+  "state": "Active"
 }
