--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -32,5 +32,6 @@
   "categories": "Categorías",
   "services":"Servicios",
   "price": "Precio",
-  "duration":"Duración"
+  "duration":"Duración",
+  "state": "Activo"
 }
