gymsuser module added

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -33,5 +33,6 @@
   "services": "Services",
   "price": "Price",
   "duration":"Duration",
-  "state": "Active"
+  "state": "Active",
+  "stars": "stars"
 }
