--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -33,5 +33,6 @@
   "services":"Servicios",
   "price": "Precio",
   "duration":"Duración",
-  "state": "Activo"
+  "state": "Activo",
+  "stars": "estrellas"
 }
