--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -21,6 +21,8 @@
   "FOOTER_RIGHTS": " <-- All rights reserved",
   "GYMS": "Gyms",
   "MY_GYMS": "My gyms",
+  "MY_SERVICES": "My services",
+  "SERVICES": "Services",
   "name": "Name",
   "address": "Adress",
   "city": "City",
@@ -38,5 +40,6 @@
   "stars": "stars",
   "image1": "Image 1",
   "image2": "Image 2",
-  "image3": "Image 3"
+  "image3": "Image 3",
+  "category": "Category"
 }
