--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -41,5 +41,8 @@
   "image1": "Image 1",
   "image2": "Image 2",
   "image3": "Image 3",
-  "category": "Category"
+  "category": "Category",
+  "minutes": "Minutes",
+  "gallery": "Gallery",
+  "gym": "Gym"
 }
