--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -44,5 +44,6 @@
   "category": "Category",
   "minutes": "Minutes",
   "gallery": "Gallery",
-  "gym": "Gym"
+  "gym": "Gym",
+  "MESSAGES.CONFIRM_DELETE": "Are you sure you want to perform this operation?"
 }
