sprint 2 changes resolved

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -35,7 +35,9 @@
   "categories": "Categories",
   "services": "Services",
   "price": "Price",
+  "pricelabel": "Price (€)",
   "duration":"Duration",
+  "durationlabel": "Duration (min)",
   "state": "Active",
   "stars": "stars",
   "image1": "Image 1",
