--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -35,7 +35,9 @@
   "categories": "Categorías",
   "services":"Servicios",
   "price": "Precio",
+  "pricelabel": "Precio (€)",
   "duration":"Duración",
+  "durationlabel": "Duración (min)",
   "state": "Activo",
   "stars": "estrellas",
   "image1": "Imagen 1",
