--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -47,5 +47,7 @@
   "minutes": "Minutes",
   "gallery": "Gallery",
   "gym": "Gym",
-  "MESSAGES.CONFIRM_DELETE": "Are you sure you want to perform this operation?"
+  "MESSAGES.CONFIRM_DELETE": "Are you sure you want to perform this operation?",
+  "REGISTER": "Sign up",
+  "REGISTER_TITLE": "Sign up and enjoy WheGym!"
 }
