delete button still failed

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -53,5 +53,6 @@
   "REGISTER_TITLE": "Sign up and enjoy WheGym!",
   "USER_PROFILE": "User profile",
   "user_": "Nickname",
-  "password": "Password"
+  "password": "Password",
+  "DELETE": "Delete"
 }
