--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -53,5 +53,6 @@
   "REGISTER_TITLE": "Apúntate y disfruta de WheGym!",
   "USER_PROFILE": "Perfil de usuario",
   "user_": "Alias",
-  "password": "Contraseña"
+  "password": "Contraseña",
+  "DELETE": "Borrar"
 }
