--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -21,6 +21,7 @@
   "FOOTER_RIGHTS": " <<-Todos los derechos reservados",
   "GYMS": "Gimnasios",
   "MY_GYMS": "Mis gimnasios",
+  "ACCESS_CARD": "Tarjeta de acceso",
   "MY_SERVICES": "Mis servicios",
   "SERVICES": "Servicios",
   "name": "Nombre",
@@ -55,5 +56,7 @@
   "USER_PROFILE": "Perfil de usuario",
   "user_": "Alias",
   "password": "Contraseña",
-  "DELETE": "Borrar"
+  "DELETE": "Borrar",
+  "GENERATE_QR": "Generar QR",
+  "active": "Activar membresía"
 }
