qr component finished

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -58,5 +58,7 @@
   "password": "Password",
   "DELETE": "Delete",
   "GENERATE_QR": "Generate QR",
-  "active": "Activate membership"
+  "active": "Activate membership",
+  "TABLE.DIALOG.TITLE_GROUPBY": "Agrupar / desagrupar por columnas",
+  "DIALOG.INFO_DIALOG": ""
 }
