--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -59,6 +59,7 @@
   "passwordconfirm": "Password confirm",
   "DELETE": "Delete",
   "GENERATE_QR": "Generate QR",
+  "QR_CODE": "QR code",
   "active": "Membership state",
   "status" : "status ok"
 }
