tecnic technical debt

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -61,5 +61,6 @@
   "GENERATE_QR": "Generate QR",
   "QR_CODE": "QR code",
   "active": "Membership state",
-  "status" : "status ok"
+  "status" : "status ok",
+  "password_required":"Use 8 or more characters with a mix of letters numbers and symbols"
 }
