--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -62,5 +62,9 @@
   "QR_CODE": "QR code",
   "active": "Membership state",
   "status" : "status ok",
-  "password_required":"Use 8 or more characters with a mix of letters numbers and symbols"
+  "password_required":"Use 8 or more characters with a mix of letters numbers and symbols",
+  "QR.ERROR_TITLE": "QR is not generated",
+  "QR.ERROR_TEXT": "Your membership is expired",
+  "SUBSCRIPTION_ACTIVE": "Active subscription",
+  "SUBSCRIPTION_DEACTIVE": "Inactive subscription"
 }
