--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -62,5 +62,9 @@
   "QR_CODE": "Código QR",
   "active": "Estado suscripción",
   "status" : "status ok",
-  "password_required": "Usa 8 o más caracteres con una mezcla de números, letras y símbolos"
+  "password_required": "Usa 8 o más caracteres con una mezcla de números, letras y símbolos",
+  "QR.ERROR_TITLE": "QR no generado",
+  "QR.ERROR_TEXT": "Tienes la membresía caducada",
+  "SUBSCRIPTION_ACTIVE": "Suscripción activa",
+  "SUBSCRIPTION_DEACTIVE": "Suscripción inactiva"
 }
