yml configuration added

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -67,7 +67,7 @@
   "QR.ERROR_TEXT": "Your membership is expired",
   "SUBSCRIPTION_ACTIVE": "Active subscription",
   "SUBSCRIPTION_DEACTIVE": "Inactive subscription",
-  "user": "I'm a user",
+  "user": "I use a gym",
   "admin": "I have a gym",
   "radio": "Who are you:"
 }
