--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -67,7 +67,7 @@
   "QR.ERROR_TEXT": "Tienes la membresía caducada",
   "SUBSCRIPTION_ACTIVE": "Suscripción activa",
   "SUBSCRIPTION_DEACTIVE": "Suscripción inactiva",
-  "user": "Soy un usuario",
+  "user": "Voy a un gimnasio",
   "admin": "Tengo un gimnasio",
   "radio": "Quién eres:"
 }
