rate & date reviews added

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -80,7 +80,7 @@
   "VALIDATOR.HASNUMBER": "Number required",
   "VALIDATOR.HASSMALLCASE": "Lowercase letter required",
   "VALIDATOR.HASSPECIALCHARACTERS": "Special character required",
-  "BEST_REVIEWS": "Top best rated",
+  "BEST_REVIEWS": "WheGym top 5 gyms",
   "ABOUT_US": "About WheGym",
   "TEXT_ABOUT": "Welcome to WheGym, your trusted partner in the search for well-being and health. At WheGym, we're committed to changing the way you experience fitness by giving you access to a diverse network of gyms under a single, convenient membership.",
   "CONTACT": "Contact"
