--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -81,6 +81,7 @@
   "VALIDATOR.HASSMALLCASE":"Se necesita minúscula",
   "VALIDATOR.HASSPECIALCHARACTERS":"Se necesita carácter especial",
   "BEST_REVIEWS": "Top 5 WheGym",
+  "BEST_REVIEWS_ADMIN":"Últimas valoraciones",
   "ABOUT_US": "Sobre WheGym",
   "TEXT_ABOUT": "Bienvenido a WheGym, tu socio de confianza en la búsqueda de bienestar y salud. En WheGym, estamos comprometidos en cambiar la forma en que experimentas el fitness, brindándote acceso a una red diversa de gimnasios bajo una única y conveniente suscripción.",
   "CONTACT": "Contacto"
