--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -84,5 +84,8 @@
   "BEST_REVIEWS_ADMIN":"The last reviews",
   "ABOUT_US": "About WheGym",
   "TEXT_ABOUT": "Welcome to WheGym, your trusted partner in the search for well-being and health. At WheGym, we're committed to changing the way you experience fitness by giving you access to a diverse network of gyms under a single, convenient membership.",
-  "CONTACT": "Contact"
+  "CONTACT": "Contact",
+  "REVIEWS": "Reviews",
+  "REVIEW": "Give your review",
+  "INFO_REVIEW":", we don't just value your opinion, we turn it into the fuel that drives our evolution! Your feedback is the spark that ignites the engine of our constant improvements. Together, we sculpt the future of WheGym."
 }
