short slider added

--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -87,8 +87,10 @@
   "CONTACT": "Contacto",
   "REVIEWS": "Reseñas",
   "REVIEW": "Deja tu valoración",
+  "select": "Escoge un gimnasio",
+  "content": "Comentarios",
   "INFO_REVIEW0":"En",
-  "INFO_REVIEW1":" no solo valoramos tu opinión,",
+  "INFO_REVIEW1":"no solo valoramos tu opinión,",
   "INFO_REVIEW2":" ¡la convertimos en el combustible que impulsa nuestra evolución!",
   "INFO_REVIEW3":"Tu feedback es la chispa que enciende el motor de nuestras mejoras constantes.",
   "INFO_REVIEW4":"Juntos, esculpimos el futuro de WheGym..",
