payment-home with css

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -93,7 +93,5 @@
   "INFO_REVIEW1":"we don't just value your opinion,",
   "INFO_REVIEW2":" we turn it into the fuel that drives our evolution!",
   "INFO_REVIEW3":"Your feedback is the spark that ignites the engine of our constant improvements.",
-  "INFO_REVIEW4":"Juntos, esculpimos el futuro de WheGym..",
-
-  "INFO_REVIEW":", we don't just value your opinion, we turn it into the fuel that drives our evolution! Your feedback is the spark that ignites the engine of our constant improvements. Together, we sculpt the future of WheGym."
+  "payment": "Quota"  
 }
