--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -93,7 +93,5 @@
   "INFO_REVIEW1":"no solo valoramos tu opinión,",
   "INFO_REVIEW2":" ¡la convertimos en el combustible que impulsa nuestra evolución!",
   "INFO_REVIEW3":"Tu feedback es la chispa que enciende el motor de nuestras mejoras constantes.",
-  "INFO_REVIEW4":"Juntos, esculpimos el futuro de WheGym..",
-
-  "INFO_REVIEW":", no solo valoramos tu opinión, ¡la convertimos en el combustible que impulsa nuestra evolución! <br>Tu feedback es la chispa que enciende el motor de nuestras mejoras constantes. <br>Juntos, esculpimos el futuro de WheGym. "
+  "payment": "Cuota"
 }
