--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -64,7 +64,7 @@
   "status" : "status ok",
   "password_required": "Usa 8 o más caracteres con una mezcla de números, letras y símbolos",
   "QR.ERROR_TITLE": "QR no generado",
-  "QR.ERROR_TEXT": "Tienes la membresía caducada",
+  "QR.ERROR_TEXT": "Tienes la suscripción caducada, ¿quieres activarla?",
   "SUBSCRIPTION_ACTIVE": "Suscripción activa",
   "SUBSCRIPTION_DEACTIVE": "Suscripción inactiva",
   "user": "Voy a un gimnasio",
