--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -101,5 +101,9 @@
   "INFO_PAYMENT1":"entendemos que cada persona tiene necesidades y metas diferentes,",
   "INFO_PAYMENT2":" por lo que ofrecemos tres emocionantes tipos de membresía para adaptarse a tu estilo de vida y objetivos. ",
   "INFO_PAYMENT3":" ¡Descubre cuál es perfecto para ti!",
-  "SUBSCRIBE_BUTTON": "Activar"
+  "SUBSCRIBE_BUTTON": "Activar",
+  "expiration": "Fecha de expiración",
+  "cardnumber": "Número de tarjeta",
+  "quota": "Cuota",
+  "holder": "Titular de la tarjeta"
 }
