--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -54,6 +54,7 @@
   "REGISTER": "Sign up",
   "REGISTER_TITLE": "Sign up and enjoy WheGym!",
   "USER_PROFILE": "User profile",
+  "RENOVATION_DATE": "Renovation Date",
   "user_": "Nickname",
   "password": "Password",
   "passwordconfirm": "Password confirm",
@@ -98,12 +99,25 @@
   "payment": "Quota",
   "MEMBERSHIP_WHEGYM": "Membership WheGym",
   "INFO_PAYMENT0":"At",
-  "INFO_PAYMENT1":"we understand that each person has different needs and goals,",
+  "INFO_PAYMENT1":" ,We understand that each person has different needs and goals,",
   "INFO_PAYMENT2":" so we offer three exciting membership types to suit your lifestyle and goals. ",
   "INFO_PAYMENT3":" Find out which one is perfect for you!",
+  "INFO_PAYMENT4": "We believe diversity is the key, so you can choose the quota that best suits you and start achieving your goals today!",
+  "QUOTA_ACTIVE": "Quota Activa",
+  "QUOTA_VITAL": "Quota Vital",
+  "QUOTA_INTEGRAL": "Quota Integral",
+  "INFO_ACCESS": "Full access to gyms",
+  "INFO_ACTIVE0": "No budget compromises",
+  "INFO_ACTIVE1": "Mornings are yours!",
+  "INFO_VITAL0": "Your training, your schedule",
+  "INFO_VITAL1": "Also in the afternoon!",
+  "INFO_INTEGRAL0": "You set the limit",
+  "INFO_INTEGRAL1": "Forget schedules!",
+  "BUTTON_ACCESS": "Access",
   "SUBSCRIBE_BUTTON": "Activate",
-  "expiration": "Fecha de expiración",
+  "expiration": "Expiration date",
   "cardnumber": "Card number",
   "quota": "Quota",
-  "holder": "Card name"
+  "holder": "Card name",
+  "PAYMENT": "Payment"
 }
