--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -54,6 +54,7 @@
   "REGISTER": "Apúntate",
   "REGISTER_TITLE": "Apúntate y disfruta de WheGym!",
   "USER_PROFILE": "Perfil de usuario",
+  "RENOVATION_DATE": "Fecha de renovación",
   "user_": "Alias",
   "password": "Contraseña",
   "passwordconfirm": "Confirmar contraseña",
@@ -98,12 +99,25 @@
   "payment": "Cuota",
   "MEMBERSHIP_WHEGYM": "Suscripción WheGym",
   "INFO_PAYMENT0":"En",
-  "INFO_PAYMENT1":"entendemos que cada persona tiene necesidades y metas diferentes,",
-  "INFO_PAYMENT2":" por lo que ofrecemos tres emocionantes tipos de membresía para adaptarse a tu estilo de vida y objetivos. ",
+  "INFO_PAYMENT1":" ,entendemos que cada persona tiene necesidades y metas diferentes,",
+  "INFO_PAYMENT2":" por lo que ofrecemos tres interesantes tipos de suscripción que se adaptan a tu estilo de vida y objetivos. ",
   "INFO_PAYMENT3":" ¡Descubre cuál es perfecto para ti!",
+  "INFO_PAYMENT4": "Creemos que la diversidad es clave, ¡así que elige la cuota que mejor se adapte a ti y comienza a alcanzar tus objetivos hoy mismo!",
+  "QUOTA_ACTIVE": "Cuota Activa",
+  "QUOTA_VITAL": "Cuota Vital",
+  "QUOTA_INTEGRAL": "Cuota Integral",
+  "INFO_ACCESS": "Acceso completo a los gimnasios",
+  "INFO_ACTIVE0": "Sin comprometer tu presupuesto",
+  "INFO_ACTIVE1": "¡Las mañanas son tuyas!",
+  "INFO_VITAL0": "Tu entrenamiento, tu horario",
+  "INFO_VITAL1": "¡También de tardeo!",
+  "INFO_INTEGRAL0": "El límite lo pones tú",
+  "INFO_INTEGRAL1": "¡Olvídate de los horarios!",
+  "BUTTON_ACCESS": "Acceder",
   "SUBSCRIBE_BUTTON": "Activar",
   "expiration": "Fecha de expiración",
   "cardnumber": "Número de tarjeta",
   "quota": "Cuota",
-  "holder": "Titular de la tarjeta"
+  "holder": "Titular de la tarjeta",
+  "PAYMENT": "Pago"
 }
