payment operation changed

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -61,7 +61,7 @@
   "DELETE": "Delete",
   "GENERATE_QR": "Generate QR",
   "QR_CODE": "QR code",
-  "active": "Membership state",
+  "active": "Autorenovation",
   "status" : "status ok",
   "password_required":"Use 8 or more characters with a mix of letters numbers and symbols",
   "QR.ERROR_TITLE": "QR is not generated",
@@ -99,7 +99,7 @@
   "payment": "Quota",
   "MEMBERSHIP_WHEGYM": "Membership WheGym",
   "INFO_PAYMENT0":"At",
-  "INFO_PAYMENT1":" ,We understand that each person has different needs and goals,",
+  "INFO_PAYMENT1":" ,we understand that each person has different needs and goals,",
   "INFO_PAYMENT2":" so we offer three exciting membership types to suit your lifestyle and goals. ",
   "INFO_PAYMENT3":" Find out which one is perfect for you!",
   "INFO_PAYMENT4": "We believe diversity is the key, so you can choose the quota that best suits you and start achieving your goals today!",
