--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -61,7 +61,7 @@
   "DELETE": "Borrar",
   "GENERATE_QR": "Generar QR",
   "QR_CODE": "Código QR",
-  "active": "Estado suscripción",
+  "active": "Autorenovación",
   "status" : "status ok",
   "password_required": "Usa 8 o más caracteres con una mezcla de números, letras y símbolos",
   "QR.ERROR_TITLE": "QR no generado",
